assets/css/style.css
/* ... */
.menu {
  -webkit-backdrop-filter: blur(5px);
  backdrop-filter: blur(5px);
  background: rgba(30, 23, 20, 0.575);
  width: 100%;
  height: 100vh;
  text-align: center;
  position: relative;
  color: #000;
  z-index: 3;
  display: flex;
  align-items: center;
  justify-content: center;
}

.close-button {
  position: absolute;
  top: 10px;
  right: 28px;
  font-size: 3.2rem;
  cursor: pointer;
  color: #fff;
  text-shadow: 2x solid black;
}

.close-button:hover {
  color: green;
  outline: rgb(74, 18, 18);
}

.menu ul {
  list-style: none;
  padding: 0;
}

.menu ul li {
  margin: 20px 0;
  text-align: center;
}

.menu ul li a {
  text-decoration: none;
  color: #fff;
  font-size: 24px;
  display: block;
}

.menu ul li a:hover {
  color: green;
}

.menu-button {
  cursor: pointer;
  background: transparent;
  color: #03a254;
  /* text-align:; */
  display: block;
  justify-content: end;
  align-items: end;
  font-size: 2.2rem;
  padding: 15px 20px 0px;
  position: fixed;
  top: 10px;
  right: 10px;
  z-index: 1;
}

.menu-button:hover {
  color: green;
}

/*  */
.quickLinkTextWrapper {
  padding-top: 1rem;
  display: flex;
  justify-content: center;
  /* padding-left: 10rem; */
  align-items: center;
  gap: 3rem;
  width: 70%;
}

.socialmediaTextWrapper {
  display: flex;
  justify-content: center;
  width: 10%;
}

/* things to do/ */
/* transistion part left of social media  */

body {
  margin: 0px;
  padding: 0px;
  font-family: sans-serif;
  /* height: 600vh; */
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex-wrap: nowrap;
  position: relative;
}

html {
  scroll-behavior: smooth;
}

.section {
  margin-bottom: 5rem;
}

.banner {
  height: 100vh;
  display: grid;
  grid-template-rows: 10% 1fr;
}

.banner::before {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  height: 110vh;
  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(29, 29, 29, 0.6)),
    url("../images/child-hands-holding-caring-young-green-plant.webp");
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  z-index: -1;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0px 8%;
  position: fixed;
  top: 0;
  width: 100%;
  background-color: transparent; /* Start as transparent */
  z-index: 10;
  height: 90px;
  transition: background-color 0.3s ease; 
}

/* Class to apply dark background */
nav.dark {
  background-color: rgba(0, 0, 0, 0.829); 
}


nav .logo img {
  cursor: pointer;
}

nav .nav_buttons {
  padding: 0px;
  margin: 0px;

  height: 100%;
  width: 30%;
  display: grid;
  grid-template-columns: repeat(4, fit-content(100px));
  position: relative;
  gap: 70px;
}

.nav_buttons .nav_button {
  text-decoration: none;
  color: #bbbbbb;
  font-family: "Poppins", sans-serif;
  font-weight: bolder;
  letter-spacing: 0.5px;

  display: flex;
  justify-content: center;
  align-items: center;

  font-size: 14px;
  cursor: pointer;

  transition-duration: 0.3s;
  position: relative;
  text-wrap: nowrap;
}

.nav_buttons .nav_button::after {
  content: "";
  position: absolute;
  bottom: 30%;
  left: 15%;

  height: 2px;
  width: 0;

  background-color: rgb(51, 175, 20);
  border-radius: 20px;
  transition: 0.3s;
}

.nav_buttons .nav_button:hover::after {
  width: 70%;
}

.nav_buttons .nav_button:hover {
  color: rgb(255, 255, 255);
  transform: scale(1.1);
}

.banner .body {
  display: flex;
  justify-content: center;
  align-items: center;

  flex-direction: column;
  gap: 2%;
}

.body .text {
  padding-top: 900px;
  color: white;
  font-size: 18px;

  text-align: center;
}

.text .Big_Text {
  font-size: 50px;
  font-weight: bold;
  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.514);
}

.body .page_buttons {
  padding-top: 15px;
  display: flex;
  justify-content: space-between;
}

.page_buttons button {
  --color_1: #ffffff;
  color: #ffffff;
  background: none;
  font-family: "Poppins", sans-serif;
  font-size: 14px;

  letter-spacing: 1px;
  cursor: pointer;

  padding: 15px 25px;
  margin: 10px;

  border: 1px solid var(--color_1);

  transition: 0.5s;
  position: relative;
  overflow: hidden;
}

.page_buttons .two {
  color: #000000;
}

.page_buttons .one:hover {
  color: #000000;
}

.page_buttons .two:hover {
  color: #ffffff;
}

.page_buttons button::before {
  content: "";
  position: absolute;
  left: 0;
  height: 0;
  width: 100%;
  background: var(--color_1);
  transition: 0.5s;
  z-index: -1;
}

.one::before {
  top: 0;
  border-radius: 0 0 50% 50%;
}

.two::before {
  bottom: 0;
  border-radius: 50% 50% 0 0;
}

.page_buttons .two::before {
  height: 180%;
}

.page_buttons .one:hover::before {
  height: 180%;
}

.page_buttons .two:hover::before {
  height: 0;
}

.locations {
  margin: 0px auto;
  height: fit-content;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  /* display: grid;
    grid-template-rows: repeat(4, 1fr);
    grid-template-columns: repeat(3, 1fr); */
  /* justify-items: center; */
  align-items: center;
}

.locations .heading {
  grid-column-start: 1;
  grid-column-end: 4;
  font-size: 35px;
  width: 100%;
  text-align: center;
}

.locations .line {
  height: 1px;
  width: 60%;
  background-color: #000000;
  margin: 20px auto;
}

.image_container {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(360px, 1fr));
  row-gap: 10px;
  column-gap: 10px;
  padding: 20px;
}

.locations img {
  width: 100%;
  border-radius: 10px;

  transition: 2sec;
  background-image: red;
}

.locations .country_images {
  position: relative;
  transition: 0.5s;
  cursor: pointer;
  margin: 5px 10px;
  display: flex;
}

.locations .country_images:hover {
  transform: scale(1.05);
}
/* ... */

